<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_apiexample"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="es.upm.miw.ratingmanager.api.example.APIExample">

    <LinearLayout
        android:id="@+id/buttonContainer"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:text="@string/nameForButtonToGetTemporalRequestToken"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonToGetTemporalRequestToken" />
        <Button
            android:text="@string/nameForButtonToValidateRequestToken"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonToValidateTemporalRequestToken" />
        <Button
            android:text="@string/nameForButtonToGetSessionID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonToGetSessionID" />

        <Button
            android:text="@string/nameForButtonToGetGenres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonToGetGenres" />
        <Button
            android:text="@string/nameForButtonToGetMovies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonToGetMovies" />
        <Button
            android:text="@string/nameForButtonToRateMovie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonToRateMovie" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/buttonContainer"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="13dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/APIResponse"
            android:layout_weight="1"
            android:scrollbars="vertical"/>
    </LinearLayout>

</RelativeLayout>
