<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_apiexample"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="es.upm.miw.ratingmanager.api.example.APIExample">

    <LinearLayout
        android:id="@+id/buttonContainer"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:text="@string/nameForButtonToGetMoviesByReleaseDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonToGetMoviesByReleaseDate" />
        <Button
            android:text="@string/nameForButtonToGetRatingByMovieID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonToGetRatingByMovieID" />
        <Button
            android:text="@string/nameForButtonToGetAppUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonToGetAppUser" />

        <Button
            android:text="@string/nameForButtonToDeleteMoviesByReleaseDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonToDeleteMoviesByReleaseDate" />
    </LinearLayout>

    <ListView
        android:id="@+id/list"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/buttonContainer"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="13dp">
    </ListView>

</RelativeLayout>
